--- a/Project Product Page/index.html
+++ b/Project Product Page/index.html
@@ -26,14 +26,25 @@
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star-half-alt"></i>
-            <span>4.7 <h6>(21 Reviews)</h6></span>
+            <span><h6>(210 Reviews)</h6></span>
           </div>
 
           <div class = "product-price">
-            <p class = "last-price">Old Price: <span>$25.00</span></p>
-            <p class = "new-price">Latest Price: <span>$20.00 (20% off)</span></p>
+            <p class = "last-price">MRP : <span>$25.00</span></p>
+            <p class = "new-price">Rent at : <span>$12.50 (50% off)</span>
+              <div class = "purchase-info">
+                <button type = "button" class = "btn">Rent Now </button>
+                <!-- <button type = "button" class = "btn">Buy Now</button> -->
+              </div>
+            </p>
+            <p class = "new-price"> Buy at : <span>$20.00 (20% off)</span>
+              <div class = "purchase-info-2">
+                <!-- <button type = "button" class = "btn">Rent Now </button> -->
+                <button type = "button" class = "btn">Buy Now</button>
+              </div>
+            </p>
           </div>
-
+          <hr>
           <div class = "product-detail">
             <h2>About this item: </h2>
             <p>Torn is the second book of the young adult paranormal literature series the Trylle Trilogy. It picks up the story of Wendy Everly and the Trylle that began in Switched. It was again self-published by Amanda Hocking as an eBook on 12 November 2010.</p>
@@ -46,12 +57,10 @@
             </ul>
           </div>
 
-          <div class = "purchase-info">
-            <button type = "button" class = "btn">
-              Add to Cart <i class = "fas fa-shopping-cart"></i>
-            </button>
+          <!-- <div class = "purchase-info">
+            <button type = "button" class = "btn">Rent Now </button>
             <button type = "button" class = "btn">Buy Now</button>
-          </div>
+          </div> -->
 
           <div class = "social-links">
             <p>Share : </p>
